# youdao_dict_for_linux

./: LICENSE  README.md  pubspec.yaml
integration_test/: simple_test.dart
lib/: flashcard_tab.dart  history_tab.dart  home_tab.dart  main.dart  settings_tab.dart  state.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: db.dart  service.dart  simple.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: db.rs  mod.rs  service.rs  simple.rs
rust_builder/: pubspec.yaml
rust_builder/linux/: CMakeLists.txt
