[package]
name = "rust_lib_youdao_dict_for_linux"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.93"
flutter_rust_bridge = "=2.6.0"
reqwest = { version = "0.12.9", features = ["json"] }
scraper = "0.21.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
